syntax = "proto3";

package game.proto;

option java_package = "com.game.proto";
option java_outer_classname = "PushProto";
option java_multiple_files = false;

import "common.proto";

// ==================== 服务端推送协议 ====================

// 推送消息类型
enum PushType {
    PUSH_TYPE_UNKNOWN = 0;
    
    // 玩家相关 (1-99)
    PUSH_PLAYER_ATTR_CHANGE = 1;     // 属性变化
    PUSH_PLAYER_LEVEL_UP = 2;        // 升级
    PUSH_ITEM_CHANGE = 3;            // 物品变化
    PUSH_EQUIPMENT_CHANGE = 4;       // 装备变化
    
    // 公会相关 (100-199)
    PUSH_GUILD_MEMBER_CHANGE = 100;  // 成员变化
    PUSH_GUILD_INFO_CHANGE = 101;    // 公会信息变化
    PUSH_GUILD_APPLY = 102;          // 收到申请
    
    // 聊天相关 (200-299)
    PUSH_CHAT_MESSAGE = 200;         // 聊天消息
    PUSH_SYSTEM_NOTICE = 201;        // 系统公告
    
    // 邮件相关 (300-399)
    PUSH_NEW_MAIL = 300;             // 新邮件
    
    // 好友相关 (400-499)
    PUSH_FRIEND_REQUEST = 400;       // 好友请求
    PUSH_FRIEND_ONLINE = 401;        // 好友上线
    PUSH_FRIEND_OFFLINE = 402;       // 好友下线
    
    // 系统相关 (900-999)
    PUSH_SERVER_KICK = 900;          // 被踢下线
    PUSH_SERVER_MAINTENANCE = 901;   // 服务器维护
}

// 被踢下线推送
message ServerKickPush {
    int32 reason = 1;                // 踢出原因 (1:异地登录 2:封禁 3:维护)
    string message = 2;              // 提示消息
}

// 新邮件推送
message NewMailPush {
    int64 mail_id = 1;               // 邮件 ID
    int32 mail_type = 2;             // 邮件类型
    string title = 3;                // 标题
    bool has_attachment = 4;         // 是否有附件
}
